--- a/gb/20/6/3/n12156746.md
+++ b/gb/20/6/3/n12156746.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rxpdbu307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rxpdbu307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rxpdbu307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rxpdbu307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rxpdbu307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新西兰疫情6.3】12天零新增利于降级 边境管控加强谨防病毒</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年06月03日讯】<span style="font-weight: 400;">（大纪元记者刘淇晴<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）</span><span style="font-weight: 400;">卫生部总干事阿什利·布卢姆菲尔德（Ashley Bloomfield）出席今天的新闻发布会对中共病毒<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>做最新的通报。</span></p>
+<p>【大纪元2020年06月03日讯】<span style="font-weight: 400;">（大纪元记者刘淇晴<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）</span><span style="font-weight: 400;">卫生部总干事阿什利·布卢姆菲尔德（Ashley Bloomfield）出席今天的新闻发布会对中共病毒<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>做最新的通报。</span></p>
 <h2><strong>连续12天零新增 有利于降至1级</strong></h2>
 <p><span style="font-weight: 400;">布卢姆菲尔德说今天没有新增的中共病毒病例，这是连续无新增病例的第12天。总病例数仍为1504例。没有新增的死亡病例。现有病例仍为1例，是一名50多岁的奥克兰女性。</span></p>
-<p><span style="font-weight: 400;">布卢姆菲尔德表示，如果未来几天继续没有新增病例，<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>将完全有能力在下周进入第1级警报。</span></p>
+<p><span style="font-weight: 400;">布卢姆菲尔德表示，如果未来几天继续没有新增病例，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>将完全有能力在下周进入第1级警报。</span></p>
 <p><span style="font-weight: 400;">新西兰已经在2级警报下维持21天。布卢姆菲尔德曾建议新西兰在2级停留28天，即两个病毒的潜伏期。</span></p>
 <p><span style="font-weight: 400;">他说，看到12天没有新增病例报告“非常令人满意”。鉴于经济遭受了重大冲击，如果能更快地摆脱封锁，就能更快地实现复苏。他说：“我们处于现在情况的原因是，在封锁期间，每个人都按要求做了该做的事，我们正在从中获益。”</span></p>
 <h2><strong>卫生部敦促更多人下载“NZ Covid Tracer”</strong></h2>
@@ -19,7 +19,7 @@
 <p><span style="font-weight: 400;">布卢姆菲尔德联系过一些已经康复但还在努力争取被他人接受的人。他说：“请大家与人为善。让他们觉得自己是我们社会的一部分。感染Covid-19（中共病毒）并不是什么耻辱。请大家包容他人。”</span></p>
 <h2><strong>转瞬间的合影</strong></h2>
 <p><span style="font-weight: 400;">由于布卢姆菲尔德之前与他人在餐厅合影过，有人曾质疑布卢姆菲尔德违反社交距离的规定。</span></p>
-<p><span style="font-weight: 400;">当被问及此事时，布卢姆菲尔德说他当时被邀请暂时站在一起拍照，时间非常短暂。他说，这与他在<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>大楼拍摄的照片相似。</span></p>
+<p><span style="font-weight: 400;">当被问及此事时，布卢姆菲尔德说他当时被邀请暂时站在一起拍照，时间非常短暂。他说，这与他在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>大楼拍摄的照片相似。</span></p>
 <h2>病毒检测将成为防疫重点</h2>
 <p><span style="font-weight: 400;">昨天共处理了1262次病毒检测，总数达到284，525次。</span></p>
 <p><span style="font-weight: 400;">布卢姆菲尔德说，降至1级警报后，病毒检测将成为防疫工作的重点。从3级警报降到2级警报时，进行了3万次病毒检测，其中包括针对无症状人群的检测。一名奥克兰机场工作人员的检测结果呈阳性。</span></p>
@@ -32,11 +32,11 @@
 <p><span style="font-weight: 400;">他说，卫生部正在考虑在14天内对机组人员进行两次测试，并正在研究如何降低机组人员来新西兰的风险。他说，接触者追踪是可靠的，12个公共卫生单位中的9个正在转移到国家数据系统。</span></p>
 <p><span style="font-weight: 400;">他说，内阁将决定是否将警报级别降至1级。12天没有报告新增病例非常令人鼓舞。消灭中共病毒是一个持续的过程，而不是一个时间点。即使国内没有中共病毒继续传播，但消灭病毒的战略还要持续进行。</span></p>
 <h2><strong>学生学分可以自动增加</strong></h2>
-<p><span style="font-weight: 400;">教育部考虑到病毒<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>对学生学业影响，尤其是对高年级学生的影响，决定为学生的NCEA学分增加额外的加分，这样使得今年的学生仍然与其他年份的学生在争取进入大学时有同样的竞争力。</span></p>
+<p><span style="font-weight: 400;">教育部考虑到病毒<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>对学生学业影响，尤其是对高年级学生的影响，决定为学生的NCEA学分增加额外的加分，这样使得今年的学生仍然与其他年份的学生在争取进入大学时有同样的竞争力。</span></p>
 <h2><strong>前中共退伍军人在纽喜遇法轮功</strong></h2>
 <p><span style="font-weight: 400;">他持旅游签证来到新西兰，在新西兰巧遇法轮功，明白了真相，退出了邪党组织。</span></p>
 <h2><strong>应该停止对电影业的巨额补贴</strong></h2>
-<p><span style="font-weight: 400;">《 阿凡达》续集制作组承认，他们来新西兰制作影片，首先是因为新西兰<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>给与他们的巨额补贴，补贴金额达到4100万元，他们还可以申请更多。而政府对自己的电影和传媒业却没有这么慷慨。本文认为政府这样的撒钱行为“荒唐可笑”。</span></p>
+<p><span style="font-weight: 400;">《 阿凡达》续集制作组承认，他们来新西兰制作影片，首先是因为新西兰<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>给与他们的巨额补贴，补贴金额达到4100万元，他们还可以申请更多。而政府对自己的电影和传媒业却没有这么慷慨。本文认为政府这样的撒钱行为“荒唐可笑”。</span></p>
 <h2><strong>我们会有一个暖冬</strong></h2>
 <p><span style="font-weight: 400;">今年的冬季比往常的正常年份冬季要暖。更多的降雨可能要等到冬末或春初才出现，北部地区干旱可能在那时才得到缓解。</span></p>
 <h2><strong>ANZ 7.62亿纽元出售名下UDC Finance</strong></h2>
@@ -357,7 +357,7 @@
 <col width="74" /></colgroup>
 <tbody>
 <tr>
-<td colspan="2" rowspan="1" data-sheets-value="{&quot;1&quot;:2,&quot;2&quot;:&quot;新西兰的感染群组6月3日统计数&quot;}">新西兰的感染群组6月3日<ahref="https://github.com/rxpdbu307/djy/blob/master/gb/tag/%E7%BB%9F%E8%AE%A1.md#1">统计</a>数</td>
+<td colspan="2" rowspan="1" data-sheets-value="{&quot;1&quot;:2,&quot;2&quot;:&quot;新西兰的感染群组6月3日统计数&quot;}">新西兰的感染群组6月3日<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BB%9F%E8%AE%A1.md#1">统计</a>数</td>
 <td></td>
 <td></td>
 </tr>
@@ -921,47 +921,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153741.md#1">【最新疫情6·2】疫情将使美经济损失近8万亿</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153812.md#1">广受欢迎的“新西兰”食品在海外生产</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153823.md#1">分析：下周是否降至1级对总理意味着什么</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153836.md#1">140万补贴资金援助皇后镇失业群体</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153842.md#1">父母团聚签证重开因冠状病毒再次延期</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153855.md#1">纽数千人参加抗议活动并违反社交距离规定</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12153865.md#1">【新西兰疫情6.2】内阁考虑下周降级 千人集会恐有传播风险</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12154613.md#1">Woolies奖励10万员工逾5000万元股票礼卡</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/20/6/2/n12154758.md#1">五眼联盟共商建可信赖供应链 抵制中共渗透</a></li>
-<li><a href="https://github.com/rxpdbu307/djy/blob/master/gb/22/2/27/n13608657.md#1">国会外抗议第20天 政客拒绝与谈判代表对话</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153741.md#1">【最新疫情6·2】疫情将使美经济损失近8万亿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153812.md#1">广受欢迎的“新西兰”食品在海外生产</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153823.md#1">分析：下周是否降至1级对总理意味着什么</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153836.md#1">140万补贴资金援助皇后镇失业群体</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153842.md#1">父母团聚签证重开因冠状病毒再次延期</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153855.md#1">纽数千人参加抗议活动并违反社交距离规定</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12153865.md#1">【新西兰疫情6.2】内阁考虑下周降级 千人集会恐有传播风险</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12154613.md#1">Woolies奖励10万员工逾5000万元股票礼卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/2/n12154758.md#1">五眼联盟共商建可信赖供应链 抵制中共渗透</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645276.md#1">政府削减燃油税 公共交通4月1日起半价</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11276054.md#1" target="_blank">金言：蒋介石当年在江西的惊人预言</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/18/n10153765.md#1" target="_blank">共产暴政录——消灭宗教</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/27/n13607928.md#1">【舞蹈三剑客】台上一分钟，台下十年功！《为神欢舞》制作花絮</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607455.md#1">【拍案惊奇】乌克兰悲壮抗战 中共海军突发演训</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13606937.md#1">【马克时空】乌克兰抗俄 刺针、标枪、NLAW导弹立战功</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605474.md#1">消息：美与北京分享俄入侵情报 中共向俄泄密</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/24/n13602257.md#1">早期胃癌难发现 八个症状需警惕</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674840.md#1">【美食天堂】鲜虾肠粉做法～完美比例配方！</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rxpdbu307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rxpdbu307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/3/n12156746.htm">【新西兰疫情6.3】12天零新增利于降级 边境管控加强谨防病毒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/3/n12156746.htm">【新西兰疫情6.3】12天零新增利于降级 边境管控加强谨防病毒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rxpdbu307/djy/blob/master/gb/20/6/3/n12156746.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rxpdbu307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rxpdbu307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rxpdbu307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rxpdbu307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rxpdbu307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/6/3/n12156746.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
